      - language-server protocol
  - Any semiring can now be lifted to a top-completed semiring with Ext (previously only allowed for Nat)
  - New graded modalities
    - LNL semiring (None, One, Many) recovers linear logic via new `hsup` operation
       to control 'push' behaviour on tensors. See: https://granule-project.github.io/papers/tlla_2021_paper11.pdf
  - Language pragmas. See: https://github.com/granule-project/granule/wiki/Language-Extensions
  - Bug fixes:
    - Bug fixes related to sensitivity analysis
    - Bug fixes relating to derived operation copyShape

  # 0.8.1.0
  - New semirings: `Sec` and `Set t` for some type `t` (and `SetOp t`)
  - Bug fixes related to session types
  - Some more type aliases added
  - Generic deriving coverage improved (especially with `drop`)

  # 0.8.0.0
  - --synthesise mode
  - Support for deriving simple distributive laws
  - Improved error messages
  - Improved dependent kinds support
  - Automatic case splitting and code rewriting features
  - `case` in types
  - New OOZ (One or Zero) semiring

  # 0.7.7.2
  - LLVM compiler separated into its own project to make building easier at the moment (see https://github.com/granule-project/granule-compiler-llvm).
  - Built-ins now get internally kind checked earlier, reducing the chance of us making malformed built-ins.
  - A couple of missing examples and tests added.
  - `case` expressions are now restricted to matching on non-indexed data types, with a helpful messages (this avoids pitfalls with dependent case)
  - Various small bug fixes.

  # 0.7.7.1
  - Some small fixes
  - Tweaks to improve error messages

  # 0.7.7.0
  - Standard library changes
    - `Cake`: back in to StdLib
    - `Choice`: new library (provides linear tensor)
    - `Prelude` change: generalised `pull`, `comp`, `unbox`
    - `Vec` addition: `pushVec`
    - `Graph` bug fixes: `size` and `vertexcount` changed due to a bug fix in Granule;