@@ -1,7 +1,7 @@
 name: granule-frontend
-version: '0.8.2.0'
+version: '0.9.0.0'
 synopsis: The Granule abstract-syntax-tree, parser and type checker libraries
-author: Dominic Orchard, Vilem-Benjamin Liepelt, Harley Eades III, Jack Hughes, Preston Keel
+author: Dominic Orchard, Vilem-Benjamin Liepelt, Harley Eades III, Jack Hughes, Preston Keel, Daniel Marshall, Michael Vollmer
 copyright: 2018-20 authors
 license: BSD3
 github: granule-project/granule
