@@ -1,5 +1,5 @@
 name: granule-repl
-version: '0.8.2.0'
+version: '0.9.0.0'
 synopsis: The Granule interactive interpreter (grepl)
 author: Dominic Orchard, Vilem-Benjamin Liepelt, Harley Eades III, Preston Keel
 copyright: 2019 authors
