@@ -1,5 +1,5 @@
 name: granule-language-server
-version: '0.8.2.0'
+version: '0.9.0.0'
 synopsis: The Granule language server (grls)
 author: Daniel Marshall
 
