@@ -8,10 +8,12 @@
   - New graded modalities
     - LNL semiring (None, One, Many) recovers linear logic via new `hsup` operation
        to control 'push' behaviour on tensors. See: https://granule-project.github.io/papers/tlla_2021_paper11.pdf
-  - Language pragmas. See: https://github.com/granule-project/granule/wiki/Language-Extensions
+  - Language extensions and pragrams: See: https://github.com/granule-project/granule/wiki/Language-Extensions
+    - Includes CBN interpreter as an option
   - Bug fixes:
     - Bug fixes related to sensitivity analysis
     - Bug fixes relating to derived operation copyShape
+    - Improved interpreter
 
   # 0.8.1.0
   - New semirings: `Sec` and `Set t` for some type `t` (and `SetOp t`)
